--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-google-maps": "^9.4.5",
+    "react-icons": "^5.3.0",
     "react-phone-number-input": "^3.4.6",
     "react-router-dom": "^6.26.2"
   },
