--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "@react-google-maps/api": "^2.19.3",
+    "@vaadin/react-components": "^24.4.4",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-google-maps": "^9.4.5",
+    "react-icons": "^5.3.0",
     "react-phone-number-input": "^3.4.6",
     "react-router-dom": "^6.26.2"
   },
