--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
   "dependencies": {
     "@react-google-maps/api": "^2.19.3",
     "@vaadin/react-components": "^24.4.4",
-    "date-fns": "^4.1.0",
     "axios": "^1.7.7",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
+    "js-cookie": "^3.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-google-maps": "^9.4.5",
